build/log/idf_py_stdout_output_88611
Command: ninja all
[1/10] Performing build step for 'bootloader'
[1/1] cd /Users/julija/school_stuff/25.2/Sensor_Dev_Proj/Code/LoRa/build/bootloader/esp-idf/esptool_py && /Users/julija/.espressif/python_env/idf5.5_py3.13_env/bin/python /Users/julija/esp/esp-idf/components/partition_table/check_sizes.py --offset 0x8000 bootloader 0x0 /Users/julija/school_stuff/25.2/Sensor_Dev_Proj/Code/LoRa/build/bootloader/bootloader.bin
Bootloader binary size 0x5240 bytes. 0x2dc0 bytes (36%) free.
[2/10] No install step for 'bootloader'
[3/10] Completed 'bootloader'
[4/10] Building CXX object esp-idf/main/CMakeFiles/__idf_main.dir/Controller/Controller.cpp.obj
FAILED: [code=1] esp-idf/main/CMakeFiles/__idf_main.dir/Controller/Controller.cpp.obj 
/Users/julija/.espressif/tools/xtensa-esp-elf/esp-14.2.0_20241119/xtensa-esp-elf/bin/xtensa-esp32s3-elf-g++ -DESP_PLATFORM -DIDF_VER=\"v5.5.1\" -DSOC_MMU_PAGE_SIZE=CONFIG_MMU_PAGE_SIZE -DSOC_XTAL_FREQ_MHZ=CONFIG_XTAL_FREQ -D_GLIBCXX_HAVE_POSIX_SEMAPHORE -D_GLIBCXX_USE_POSIX_SEMAPHORE -D_GNU_SOURCE -D_POSIX_READER_WRITER_LOCKS -I/Users/julija/school_stuff/25.2/Sensor_Dev_Proj/Code/LoRa/build/config -I/Users/julija/school_stuff/25.2/Sensor_Dev_Proj/Code/LoRa/main -I/Users/julija/school_stuff/25.2/Sensor_Dev_Proj/Code/LoRa/main/LoRa_module -I/Users/julija/school_stuff/25.2/Sensor_Dev_Proj/Code/LoRa/main/Controller -I/Users/julija/esp/esp-idf/components/newlib/platform_include -I/Users/julija/esp/esp-idf/components/freertos/config/include -I/Users/julija/esp/esp-idf/components/freertos/config/include/freertos -I/Users/julija/esp/esp-idf/components/freertos/config/xtensa/include -I/Users/julija/esp/esp-idf/components/freertos/FreeRTOS-Kernel/include -I/Users/julija/esp/esp-idf/components/freertos/FreeRTOS-Kernel/portable/xtensa/include -I/Users/julija/esp/esp-idf/components/freertos/FreeRTOS-Kernel/portable/xtensa/include/freertos -I/Users/julija/esp/esp-idf/components/freertos/esp_additions/include -I/Users/julija/esp/esp-idf/components/esp_hw_support/include -I/Users/julija/esp/esp-idf/components/esp_hw_support/include/soc -I/Users/julija/esp/esp-idf/components/esp_hw_support/include/soc/esp32s3 -I/Users/julija/esp/esp-idf/components/esp_hw_support/dma/include -I/Users/julija/esp/esp-idf/components/esp_hw_support/ldo/include -I/Users/julija/esp/esp-idf/components/esp_hw_support/debug_probe/include -I/Users/julija/esp/esp-idf/components/esp_hw_support/mspi_timing_tuning/include -I/Users/julija/esp/esp-idf/components/esp_hw_support/mspi_timing_tuning/tuning_scheme_impl/include -I/Users/julija/esp/esp-idf/components/esp_hw_support/power_supply/include -I/Users/julija/esp/esp-idf/components/esp_hw_support/port/esp32s3/. -I/Users/julija/esp/esp-idf/components/esp_hw_support/port/esp32s3/include -I/Users/julija/esp/esp-idf/components/esp_hw_support/mspi_timing_tuning/port/esp32s3/. -I/Users/julija/esp/esp-idf/components/esp_hw_support/mspi_timing_tuning/port/esp32s3/include -I/Users/julija/esp/esp-idf/components/heap/include -I/Users/julija/esp/esp-idf/components/heap/tlsf -I/Users/julija/esp/esp-idf/components/log/include -I/Users/julija/esp/esp-idf/components/soc/include -I/Users/julija/esp/esp-idf/components/soc/esp32s3 -I/Users/julija/esp/esp-idf/components/soc/esp32s3/include -I/Users/julija/esp/esp-idf/components/soc/esp32s3/register -I/Users/julija/esp/esp-idf/components/hal/platform_port/include -I/Users/julija/esp/esp-idf/components/hal/esp32s3/include -I/Users/julija/esp/esp-idf/components/hal/include -I/Users/julija/esp/esp-idf/components/esp_rom/include -I/Users/julija/esp/esp-idf/components/esp_rom/esp32s3/include -I/Users/julija/esp/esp-idf/components/esp_rom/esp32s3/include/esp32s3 -I/Users/julija/esp/esp-idf/components/esp_rom/esp32s3 -I/Users/julija/esp/esp-idf/components/esp_common/include -I/Users/julija/esp/esp-idf/components/esp_system/include -I/Users/julija/esp/esp-idf/components/esp_system/port/soc -I/Users/julija/esp/esp-idf/components/esp_system/port/include/private -I/Users/julija/esp/esp-idf/components/xtensa/esp32s3/include -I/Users/julija/esp/esp-idf/components/xtensa/include -I/Users/julija/esp/esp-idf/components/xtensa/deprecated_include -I/Users/julija/esp/esp-idf/components/esp_driver_uart/include -I/Users/julija/esp/esp-idf/components/esp_driver_gpio/include -mlongcalls  -fno-builtin-memcpy -fno-builtin-memset -fno-builtin-bzero -fno-builtin-stpcpy -fno-builtin-strncpy -fdiagnostics-color=always -ffunction-sections -fdata-sections -Wall -Werror=all -Wno-error=unused-function -Wno-error=unused-variable -Wno-error=unused-but-set-variable -Wno-error=deprecated-declarations -Wextra -Wno-error=extra -Wno-unused-parameter -Wno-sign-compare -Wno-enum-conversion -gdwarf-4 -ggdb -Og -fno-shrink-wrap -fmacro-prefix-map=/Users/julija/school_stuff/25.2/Sensor_Dev_Proj/Code/LoRa=. -fmacro-prefix-map=/Users/julija/esp/esp-idf=/IDF -fstrict-volatile-bitfields -fno-jump-tables -fno-tree-switch-conversion -std=gnu++2b -fno-exceptions -fno-rtti -fuse-cxa-atexit -MD -MT esp-idf/main/CMakeFiles/__idf_main.dir/Controller/Controller.cpp.obj -MF esp-idf/main/CMakeFiles/__idf_main.dir/Controller/Controller.cpp.obj.d -o esp-idf/main/CMakeFiles/__idf_main.dir/Controller/Controller.cpp.obj -c /Users/julija/school_stuff/25.2/Sensor_Dev_Proj/Code/LoRa/main/Controller/Controller.cpp
/Users/julija/school_stuff/25.2/Sensor_Dev_Proj/Code/LoRa/main/Controller/Controller.cpp: In constructor 'Controller::Controller(uint32_t, UBaseType_t)':
/Users/julija/school_stuff/25.2/Sensor_Dev_Proj/Code/LoRa/main/Controller/Controller.cpp:19:30: error: 'name' was not declared in this scope; did you mean 'rename'?
   19 |     xTaskCreate(taskWrapper, name, stack_size, this, priority, &control_handle);
      |                              ^~~~
      |                              rename
[5/10] Building CXX object esp-idf/main/CMakeFiles/__idf_main.dir/main.cpp.obj
ninja: build stopped: subcommand failed.
